cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(customICP)
set(PCL_DIR "/usr/local/share/pcl-1.7/PCLConfig.cmake")
set(BIN_NAME "customICP")
find_package(PCL 1.7 REQUIRED COMPONENTS io common registration filters kdtree visualization)

include_directories(/usr/include/eigen3)
include_directories(/usr/include/openni/)
include_directories(/usr/local/include/pcl-1.7/)
add_definitions(${PCL_DEFINITIONS})

add_executable (${BIN_NAME} src/main.cpp)
target_link_libraries (${BIN_NAME} ${PCL_LIBRARIES})
target_link_libraries(${BIN_NAME} OpenNI)
target_link_libraries(${BIN_NAME} ${PCL_IO_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_VISUALIZATION_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_REGISTRATION_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_COMMON_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_KDTREE_LIBRARIES})
target_link_libraries(${BIN_NAME} pcl_octree)
target_link_libraries(${BIN_NAME} pcl_filters)
target_link_libraries(${BIN_NAME} boost_thread)
target_link_libraries(${BIN_NAME} vtkCommon)
target_link_libraries(${BIN_NAME} vtkFiltering)

