cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(customICP)
#set(PCL_DIR "/usr/share/pcl-1.7/PCLConfig.cmake")
set(BIN_NAME "customICP")
set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} /usr/lib)
find_package(PCL 1.7 REQUIRED COMPONENTS io common registration filters kdtree visualization)

include_directories(/usr/include/eigen3)
include_directories(/usr/include/openni/)
include_directories(/usr/include/pcl/)
include_directories(/usr/include/vtk-5.8/)
add_definitions(${PCL_DEFINITIONS})

find_package(OpenCV)
#include_directories(/usr/local/include/opencv2/)

set(CMAKE_CXX_FLAGS "-g -Wall")
add_executable (${BIN_NAME} src/main.cpp)
add_library (oflow src/oflow_pcl.cpp)
add_library (cicp src/CustomICP.cpp)
target_link_libraries(oflow ${OpenCV_LIBS})
target_link_libraries(oflow ${PCL_LIBRARIES})
target_link_libraries(cicp  ${PCL_LIBRARIES})
target_link_libraries(cicp  oflow)
target_link_libraries (${BIN_NAME} oflow)
target_link_libraries (${BIN_NAME} cicp)
target_link_libraries (${BIN_NAME} ${PCL_LIBRARIES})
target_link_libraries(${BIN_NAME} OpenNI)
target_link_libraries(${BIN_NAME} ${PCL_IO_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_VISUALIZATION_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_REGISTRATION_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_COMMON_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_KDTREE_LIBRARIES})
target_link_libraries(${BIN_NAME} pcl_octree)
target_link_libraries(${BIN_NAME} pcl_filters)
target_link_libraries(${BIN_NAME} boost_thread)
target_link_libraries(${BIN_NAME} vtkCommon)
target_link_libraries(${BIN_NAME} vtkFiltering)

